feat: Bacen API CDI request working